# MetaQuest3-Calibration-Demo

./: .gitignore
Assets/: msgbrowser_settings.asset
Assets/Experimental/: Cube.prefab  OccludedAnchorPlacementBuildingBlock.prefab  Occluded_Ray.mat  Occluded_Red 1.mat  Occluded_Red.mat  Repositioner.prefab  VisibleRay.prefab  fer.prefab  fer.urdf
Assets/Experimental/Materials/: Blue.mat
Assets/Miscellaneous/: PointBlue.prefab  PointGreen.prefab  PointRed.prefab  fer_visual_twin.prefab
Assets/Miscellaneous/Materials/: Default.mat  Green.mat  PointDefault.mat  Red.mat  Translucent.mat
Assets/Miscellaneous/PCL/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  android_arm64_toolchain.cmake  build_cmake.ps1  pcl_endpoints.cpp  pcl_endpoints.h
Assets/Plugins/Android/: AndroidManifest.xml
Assets/Resources/: ImmersiveDebuggerSettings.asset  OculusRuntimeSettings.asset  ROSConnectionPrefab.prefab
Assets/Scenes/: Positioning.unity  Programming.unity  SampleScene.unity
Assets/Scripts/: ArticulationBodiesEnabled.cs  CubeSpawner.cs  GrabFreeTransformerEventBool.cs  IterativeClosestPoint.cs  JarvisMarchScript.cs  KDTree3D.cs  MatrixHelpers.cs  SceneMeshManager.cs  SetEffectMeshLayer.cs  URDFPointCloudManager.cs  UnionFindScript.cs
Assets/Scripts/ConvexHullCalculator/: README.md
Assets/Scripts/Datastructures/: README.md
Assets/Scripts/Positioning/: DigitalTwinManager.cs  JointPositionState.cs
Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
(+13 files in other folders)
