cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(PCL_ENDPOINTS)
find_package(PCL 1.3 REQUIRED)
find_package(Eigen3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_library(pcl_endpoints SHARED pcl_endpoints.cpp pcl_endpoints.h)
target_include_directories(pcl_endpoints PUBLIC ${PROJECT_SOURCE_DIR})
target_link_libraries(pcl_endpoints ${PCL_LIBRARIES})